--- a/config.yml
+++ b/config.yml
@@ -2,70 +2,70 @@
 # Homepage configuration
 # See https://fontawesome.com/icons for icons options
 
-title: "Demo dashboard"
-subtitle: "Homer"
+title: "Tiller's Home Screen"
+subtitle: "Home Screen"
 logo: "assets/logo.png"
 # icon: "fas fa-skull-crossbones" Optional icon
 footer: '<p>Created with <span class="has-text-danger">❤️</span> with <a href="https://bulma.io/">bulma</a>, <a href="https://vuejs.org/">vuejs</a> & <a href="https://fontawesome.com/">font awesome</a> // Fork me on <a href="https://github.com/bastienwirtz/homer"><i class="fab fa-github-alt"></i></a></p>'  # set false if you want to hide it.
 
 # Optional message
-message:
+#message:
   # url: https://....
-  style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
-  title: "Demo !" 
-  content: "This is a dummy homepage demo. Find more information on github.com/bastienwirtz/homer"
+  #style: "is-dark" # See https://bulma.io/documentation/components/message/#colors for styling options.
+  #title: "Demo !" 
+  #content: "This is a dummy homepage demo. Find more information on github.com/bastienwirtz/homer"
 
 # Optional navbar
 # links: [] # Allows for navbar (dark mode, layout, and search) without any links
-links:
-  - name: "ansible"
-    icon: "fab fa-github"
-    url: "https://github.com/bastienwirtz/homer"
-    target: '_blank' # optional html a tag target attribute
-  - name: "Wiki"
-    icon: "fas fa-book"
-    url: "https://www.wikipedia.org/"
+#links:
+#  - name: "ansible"
+#    icon: "fab fa-github"
+#    url: "https://github.com/bastienwirtz/homer"
+#    target: '_blank' # optional html a tag target attribute
+#  - name: "Wiki"
+#    icon: "fas fa-book"
+#    url: "https://www.wikipedia.org/"
 
 # Services
 # First level array represent a group.
 # Leave only a "items" key if not using group (group name, icon & tagstyle are optional, section separation will not be displayed).
 services:
-  - name: "DevOps"
-    icon: "fas fa-code-branch"
+  - name: "Servers"
+    icon: "fas fa-server"
     items:
-      - name: "Jenkins"
-        logo: "assets/tools/jenkins.png"
+      - name: "Proxmox"
+        logo: "assets/tools/proxmox.png"
         subtitle: "Continuous integration server"
-        tag: "CI"
-        url: "https://jenkins.io/"
+        tag: ""
+        url: "https://server.tiller.pw/"
         target: '_blank' # optional html a tag target attribute
-      - name: "RabbitMQ Management"
-        logo: "assets/tools/rabbitmq.png"
-        subtitle: "Manage & monitor RabbitMQ server"
-        tag: "haproxy"
+      - name: "Minecraft Hosting"
+        logo: "assets/tools/minecraft.png"
+        subtitle: "The server where I host all of my gameservers at. "
+        tag: ""
         # Optional tagstyle
         # Same styling options as the optional message.
         tagstyle: "is-success"
-        url: "https://www.rabbitmq.com/"
+        url: "http://mc.tiller.pw/"
+      - name: "Pi-Hole"
+        logo: "assets/tools/minecraft.png"
+        subtitle: "Pi-Hole DNS Server setup at home."
+        tag: ""
+        # Optional tagstyle
+        # Same styling options as the optional message.
+        tagstyle: "is-success"
+        url: "https://pihole.tiller.pw/admin"
   - name: "Monitoring"
     icon: "fas fa-heartbeat"
     items:
-      - name: "M/Monit"
-        logo: "assets/tools/monit.png"
-        subtitle: "Monitor & manage all monit enabled hosts"
-        tag: "monit"
-        url: "https://mmonit.com/monit/"
-      - name: "Grafana"
-        logo: "assets/tools/grafana.png"
-        subtitle: "Metric analytics & dashboards"
-        url: "https://grafana.com/"
-      - name: "Kibana"
-        logo: "assets/tools/elastic.png"
-        subtitle: "Explore & visualize logs"
-        tag: "elk"
-        url: "https://www.elastic.co/products/kibana"
-      - name: "Website monitoring"
-        logo: "assets/tools/pingdom.png"
-        subtitle: "Pingdom public reports overview"
-        tag: "CI"
-        url: "https://www.pingdom.com/"
+      - name: "NetData Server 1"
+        logo: "assets/tools/netdata.png"
+        subtitle: "NetData (Where most things are hosted like the minecraft server.)"
+        tag: ""
+        url: "https://status.tiller.pw/server1/"
+      - name: "NetData Server 2"
+        logo: "assets/tools/netdata.png"
+        subtitle: "NetData"
+        tag: ""
+        url: "https://status.tiller.pw/server1/"
+
